--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/style.css">
     
     <title>
         My Portfolio
@@ -14,12 +15,54 @@
 
 <body>
     <header class="navigation">
-        <div class="inline-block and logo">
-            <img >
-        
+        <div class="inline-block">
+            <img class="logo" src="/Images/LOGO.png">
         </div>
+        <nav class="inline-block">
+         <!--unordered list--> 
+            <li class="inline-block">
+               About 
+            </li>
+            <li class="inline-block">
+                Skills
+             </li>
+             <li class="inline-block">
+                My Work 
+             </li>
+             <li class="inline-block">
+                Contact 
+             </li>
+        </nav>
     </header>
 
+    <section class="heroImg">
+     <div class="content">
+        <img class="me" src="/Images/Hero Img.jpeg">
+        <p>
+            Hello! I am Agnes, a UX researcher that is passionate about engaging with users and solving issues in my community through research and design. I have a masters degree in psychology which enhances my research skills and I always look for opportunities to indulge in other diverse perspectives and experiences by traveling and engaging with my community on social media. This informs my research and guides me in improving my designs. 
+        </p>
+        <Button>
+            Download Resume
+        </Button>
+     </div>
+    </section>
+
+    <footer>
+        <ul>
+            <li class="inline-block">
+                About 
+             </li>
+             <li class="inline-block">
+                 Skills
+              </li>
+              <li class="inline-block">
+                 My Work 
+              </li>
+              <li class="inline-block">
+                 Contact 
+              </li>
+        </ul>
+    </footer>
 
 </body>
 
