--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="navigation">
         <div class="inline-block logo">
-            <img class="logoImg" src="/Images/LOGO.png">
+            <img class="logoImg" src="Images/LOGO.png">
         </div>
 
         <nav class="inline-block">
@@ -64,7 +64,7 @@
 
     <footer class="footer">
         <div class="inline-block logo">
-            <img class="bottomlogo" src="/Images/LOGO.png">
+            <img class="bottomlogo" src="Images/LOGO.png">
         </div>
         <nav class="footercontact">
         <li>
